Finished settings page revision

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -295,7 +295,7 @@ pre {
   font-family: monospace; }
 
 body {
-  color: #4a4a4a;
+  color: #25283D;
   font-size: 1em;
   font-weight: 400;
   line-height: 1.5; }
@@ -348,7 +348,7 @@ fieldset {
 pre {
   -webkit-overflow-scrolling: touch;
   background-color: whitesmoke;
-  color: #4a4a4a;
+  color: #25283D;
   font-size: 0.875em;
   overflow-x: auto;
   padding: 1.25rem 1.5rem;
@@ -374,7 +374,7 @@ table th {
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #4a4a4a;
+  color: #25283D;
   display: block;
   padding: 1.25rem; }
 
@@ -425,7 +425,7 @@ a.box:active {
   .button.is-text {
     background-color: transparent;
     border-color: transparent;
-    color: #4a4a4a;
+    color: #25283D;
     text-decoration: underline; }
     .button.is-text:hover, .button.is-text.is-hovered, .button.is-text:focus, .button.is-text.is-focused {
       background-color: whitesmoke;
@@ -1213,7 +1213,7 @@ a.box:active {
   .button.is-static {
     background-color: whitesmoke;
     border-color: #dbdbdb;
-    color: #7a7a7a;
+    color: rgba(37, 40, 61, 0.1);
     box-shadow: none;
     pointer-events: none; }
   .button.is-rounded {
@@ -1624,11 +1624,11 @@ a.box:active {
   .progress::-webkit-progress-bar {
     background-color: #ededed; }
   .progress::-webkit-progress-value {
-    background-color: #4a4a4a; }
+    background-color: #25283D; }
   .progress::-moz-progress-bar {
-    background-color: #4a4a4a; }
+    background-color: #25283D; }
   .progress::-ms-fill {
-    background-color: #4a4a4a;
+    background-color: #25283D;
     border: none; }
   .progress.is-white::-webkit-progress-value {
     background-color: white; }
@@ -1716,7 +1716,7 @@ a.box:active {
     animation-name: moveIndeterminate;
     animation-timing-function: linear;
     background-color: #ededed;
-    background-image: linear-gradient(to right, #4a4a4a 30%, #ededed 30%);
+    background-image: linear-gradient(to right, #25283D 30%, #ededed 30%);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 150% 150%; }
@@ -1911,7 +1911,7 @@ a.box:active {
   align-items: center;
   background-color: whitesmoke;
   border-radius: 4px;
-  color: #4a4a4a;
+  color: #25283D;
   display: inline-flex;
   font-size: 0.75rem;
   height: 2em;
@@ -2062,7 +2062,7 @@ a.tag:hover {
     font-size: 0.75rem; }
 
 .subtitle {
-  color: #4a4a4a;
+  color: #25283D;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25; }
@@ -2142,31 +2142,31 @@ a.tag:hover {
     background-color: whitesmoke;
     border-color: whitesmoke;
     box-shadow: none;
-    color: #7a7a7a; }
+    color: rgba(37, 40, 61, 0.1); }
     .input[disabled]::-moz-placeholder, .textarea[disabled]::-moz-placeholder, .select select[disabled]::-moz-placeholder,
     fieldset[disabled] .input::-moz-placeholder,
     fieldset[disabled] .textarea::-moz-placeholder,
     fieldset[disabled] .select select::-moz-placeholder,
     .select fieldset[disabled] select::-moz-placeholder {
-      color: rgba(122, 122, 122, 0.3); }
+      color: rgba(37, 40, 61, 0.3); }
     .input[disabled]::-webkit-input-placeholder, .textarea[disabled]::-webkit-input-placeholder, .select select[disabled]::-webkit-input-placeholder,
     fieldset[disabled] .input::-webkit-input-placeholder,
     fieldset[disabled] .textarea::-webkit-input-placeholder,
     fieldset[disabled] .select select::-webkit-input-placeholder,
     .select fieldset[disabled] select::-webkit-input-placeholder {
-      color: rgba(122, 122, 122, 0.3); }
+      color: rgba(37, 40, 61, 0.3); }
     .input[disabled]:-moz-placeholder, .textarea[disabled]:-moz-placeholder, .select select[disabled]:-moz-placeholder,
     fieldset[disabled] .input:-moz-placeholder,
     fieldset[disabled] .textarea:-moz-placeholder,
     fieldset[disabled] .select select:-moz-placeholder,
     .select fieldset[disabled] select:-moz-placeholder {
-      color: rgba(122, 122, 122, 0.3); }
+      color: rgba(37, 40, 61, 0.3); }
     .input[disabled]:-ms-input-placeholder, .textarea[disabled]:-ms-input-placeholder, .select select[disabled]:-ms-input-placeholder,
     fieldset[disabled] .input:-ms-input-placeholder,
     fieldset[disabled] .textarea:-ms-input-placeholder,
     fieldset[disabled] .select select:-ms-input-placeholder,
     .select fieldset[disabled] select:-ms-input-placeholder {
-      color: rgba(122, 122, 122, 0.3); }
+      color: rgba(37, 40, 61, 0.3); }
 
 .input, .textarea {
   box-shadow: inset 0 0.0625em 0.125em rgba(10, 10, 10, 0.05);
@@ -2266,7 +2266,7 @@ a.tag:hover {
   .checkbox[disabled], .radio[disabled],
   fieldset[disabled] .checkbox,
   fieldset[disabled] .radio {
-    color: #7a7a7a;
+    color: rgba(37, 40, 61, 0.1);
     cursor: not-allowed; }
 
 .radio + .radio {
@@ -2394,7 +2394,7 @@ a.tag:hover {
   .select.is-large {
     font-size: 1.5rem; }
   .select.is-disabled::after {
-    border-color: #7a7a7a; }
+    border-color: rgba(37, 40, 61, 0.1); }
   .select.is-fullwidth {
     width: 100%; }
     .select.is-fullwidth select {
@@ -2675,7 +2675,7 @@ a.tag:hover {
 
 .file-cta {
   background-color: whitesmoke;
-  color: #4a4a4a; }
+  color: #25283D; }
 
 .file-name {
   border-color: #dbdbdb;
@@ -2876,7 +2876,7 @@ a.tag:hover {
   .control.has-icons-left .input:focus ~ .icon,
   .control.has-icons-left .select:focus ~ .icon, .control.has-icons-right .input:focus ~ .icon,
   .control.has-icons-right .select:focus ~ .icon {
-    color: #4a4a4a; }
+    color: #25283D; }
   .control.has-icons-left .input.is-small ~ .icon,
   .control.has-icons-left .select.is-small ~ .icon, .control.has-icons-right .input.is-small ~ .icon,
   .control.has-icons-right .select.is-small ~ .icon {
@@ -2976,7 +2976,7 @@ a.tag:hover {
 .card {
   background-color: white;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #4a4a4a;
+  color: #25283D;
   max-width: 100%;
   position: relative; }
 
@@ -3063,7 +3063,7 @@ a.tag:hover {
   padding-top: 0.5rem; }
 
 .dropdown-item {
-  color: #4a4a4a;
+  color: #25283D;
   display: block;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -3222,7 +3222,7 @@ button.dropdown-item {
   line-height: 1.25; }
   .menu-list a {
     border-radius: 2px;
-    color: #4a4a4a;
+    color: #25283D;
     display: block;
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
@@ -3237,7 +3237,7 @@ button.dropdown-item {
     padding-left: 0.75em; }
 
 .menu-label {
-  color: #7a7a7a;
+  color: rgba(37, 40, 61, 0.1);
   font-size: 0.75em;
   letter-spacing: 0.1em;
   text-transform: uppercase; }
@@ -3340,7 +3340,7 @@ button.dropdown-item {
 
 .message-header {
   align-items: center;
-  background-color: #4a4a4a;
+  background-color: #25283D;
   border-radius: 4px 4px 0 0;
   color: #fff;
   display: flex;
@@ -3363,7 +3363,7 @@ button.dropdown-item {
   border-radius: 4px;
   border-style: solid;
   border-width: 0 0 0 4px;
-  color: #4a4a4a;
+  color: #25283D;
   padding: 1.25em 1.5em; }
   .message-body code,
   .message-body pre {
@@ -3950,7 +3950,7 @@ body.has-navbar-fixed-bottom {
   overflow-y: hidden; }
 
 .navbar-burger {
-  color: #4a4a4a;
+  color: #25283D;
   cursor: pointer;
   display: block;
   height: 3.25rem;
@@ -3988,7 +3988,7 @@ body.has-navbar-fixed-bottom {
 
 .navbar-item,
 .navbar-link {
-  color: #4a4a4a;
+  color: #25283D;
   display: block;
   line-height: 1.5;
   padding: 0.5rem 0.75rem;
@@ -4300,7 +4300,7 @@ a.navbar-item,
     background-color: #dbdbdb;
     border-color: #dbdbdb;
     box-shadow: none;
-    color: #7a7a7a;
+    color: rgba(37, 40, 61, 0.1);
     opacity: 0.5; }
 
 .pagination-previous,
@@ -4463,7 +4463,7 @@ a.navbar-item,
       color: #363636; }
 
 .panel-list a {
-  color: #4a4a4a; }
+  color: #25283D; }
   .panel-list a:hover {
     color: #3273dc; }
 
@@ -4505,7 +4505,7 @@ label.panel-block {
   text-align: center;
   vertical-align: top;
   width: 1em;
-  color: #7a7a7a;
+  color: rgba(37, 40, 61, 0.1);
   margin-right: 0.75em; }
   .panel-icon .fa {
     font-size: inherit;
@@ -4525,7 +4525,7 @@ label.panel-block {
     border-bottom-color: #dbdbdb;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    color: #4a4a4a;
+    color: #25283D;
     display: flex;
     justify-content: center;
     margin-bottom: -1px;
@@ -7487,10 +7487,58 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .has-text-gradient {
   color: #A8E7F4 !important; }
 
-.has-text-weight-bold {
-  font-weight: 900 !important; }
-
 .card {
   background: #FFFFFF;
   box-shadow: 0px 1px 50px rgba(0, 0, 0, 0.05);
   border-radius: 1.5vh; }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 36px;
+  height: 19px; }
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(37, 40, 61, 0.1);
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 3px;
+  bottom: 3px;
+  background-color: rgba(37, 40, 61, 0.25);
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+input:checked + .slider {
+  background: linear-gradient(240.44deg, #AFCFEC 5.34%, #AFECE7 100%); }
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 64px; }
+
+.slider.round:before {
+  border-radius: 50%; }
