--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,6 +38,10 @@ $text-light: rgba(37, 40, 61, 0.1);
     border-radius: 1.5vh;
 }
 
+.section {
+  margin-bottom: 6vh;
+}
+
 // Checkbox CSS
 .switch {
     position: relative;
